--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <header class="flex flex-col sm:flex-row justify-between items-start sm:items-center mb-8">
             <div>
                 <h1 class="text-3xl font-bold text-gray-900">Gerenciador de Pedidos</h1>
-                <p class="text-gray-600 mt-1">Sua ferramenta de gestão de fardamentos 1.5.</p>
+                <p class="text-gray-600 mt-1">Sua ferramenta de gestão de fardamentos 1.6.</p>
             </div>
             <button id="addOrderBtn" class="mt-4 sm:mt-0 bg-blue-600 text-white font-semibold py-2 px-4 rounded-lg shadow-md hover:bg-blue-700 transition duration-300 flex items-center">
                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6 mr-2"><path stroke-linecap="round" stroke-linejoin="round" d="M12 9v6m3-3H9m12 0a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z" /></svg>
@@ -46,14 +46,15 @@
 
     <div id="orderModal" class="fixed inset-0 bg-gray-900 bg-opacity-75 flex items-center justify-center p-4 z-50 hidden">
         <div class="bg-white rounded-xl shadow-2xl w-full max-w-5xl max-h-[95vh] overflow-y-auto">
-            <form id="orderForm" class="p-8 space-y-6">
+            <form id="orderForm" class="p-4 sm:p-8 space-y-6">
                 <h2 id="modalTitle" class="text-2xl font-bold">Novo Pedido</h2>
                 <input type="hidden" id="orderId">
 
                 <fieldset class="border p-4 rounded-lg">
                     <legend class="text-lg font-semibold px-2">1. Dados do Cliente e Datas</legend>
+                    <!-- Ajuste de responsividade: grid se torna 1 coluna em telas pequenas -->
                     <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-4 mt-2">
-                        <input type="text" id="clientName" placeholder="Nome do Cliente" class="p-2 border rounded-md w-full lg:col-span-2" required>
+                        <input type="text" id="clientName" placeholder="Nome do Cliente" class="p-2 border rounded-md w-full md:col-span-2 lg:col-span-2" required>
                         <input type="text" id="clientPhone" placeholder="Telefone" class="p-2 border rounded-md w-full">
                         <select id="orderStatus" class="p-2 border rounded-md w-full bg-white"><option value="Pendente">Pendente</option><option value="Confirmado">Confirmado</option><option value="Em Produção">Em Produção</option><option value="Finalizado">Finalizado</option><option value="Entregue">Entregue</option></select>
                         <div><label for="orderDate" class="text-xs">Data Pedido</label><input type="date" id="orderDate" class="p-2 border rounded-md w-full"></div>
@@ -90,7 +91,8 @@
                 <fieldset class="border p-4 rounded-lg">
                     <legend class="text-lg font-semibold px-2">6. Financeiro</legend>
                     <div id="financialsContainer" class="space-y-4 mb-4"></div>
-                    <div class="grid grid-cols-1 md:grid-cols-4 gap-4 border-t pt-4">
+                    <!-- Ajuste de responsividade: se torna 1 coluna em telas pequenas -->
+                    <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-4 border-t pt-4">
                         <input type="number" step="0.01" id="downPayment" placeholder="Adiantamento (R$)" class="p-2 border rounded-md w-full">
                         <input type="text" id="paymentMethod" placeholder="Forma de Pagamento" class="p-2 border rounded-md w-full">
                         <div class="bg-gray-100 p-3 rounded-lg text-center">
@@ -104,10 +106,10 @@
                     </div>
                 </fieldset>
 
-                <div class="flex justify-end items-center space-x-4 mt-8">
+                <div class="flex flex-col sm:flex-row justify-end items-center space-x-0 sm:space-x-4 mt-8 space-y-4 sm:space-y-0">
                     <div id="uploadIndicator" class="text-sm text-blue-600 font-semibold hidden">Salvando...</div>
-                    <button type="button" id="cancelBtn" class="bg-gray-500 text-white font-semibold py-2 px-6 rounded-lg hover:bg-gray-600">Cancelar</button>
-                    <button type="submit" id="saveBtn" class="bg-green-600 text-white font-semibold py-2 px-6 rounded-lg hover:bg-green-700">Salvar Pedido</button>
+                    <button type="button" id="cancelBtn" class="bg-gray-500 text-white font-semibold py-2 px-6 rounded-lg hover:bg-gray-600 w-full sm:w-auto">Cancelar</button>
+                    <button type="submit" id="saveBtn" class="bg-green-600 text-white font-semibold py-2 px-6 rounded-lg hover:bg-green-700 w-full sm:w-auto">Salvar Pedido</button>
                 </div>
             </form>
         </div>
@@ -115,8 +117,9 @@
 
     <template id="partTemplate">
         <div class="part-item border p-3 rounded-md bg-gray-50 relative">
-            <div class="grid grid-cols-2 md:grid-cols-5 gap-2">
-                <input type="text" placeholder="Tipo (ex: Gola Redonda Manga Curta)" class="p-2 border rounded-md w-full col-span-2 part-type">
+            <!-- Ajuste de responsividade: colunas se adaptam em telas pequenas -->
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-5 gap-2">
+                <input type="text" placeholder="Tipo (ex: Gola Redonda Manga Curta)" class="p-2 border rounded-md w-full md:col-span-2 lg:col-span-2 part-type">
                 <input type="text" placeholder="Material (ex: Dry-Fit)" class="p-2 border rounded-md w-full part-material">
                 <input type="text" placeholder="Cor Malha" class="p-2 border rounded-md w-full part-color-main">
                 <input type="text" placeholder="Cor Manga/Gola" class="p-2 border rounded-md w-full part-color-details">
@@ -126,8 +129,9 @@
     </template>
 
     <template id="financialRowTemplate">
-        <div class="financial-item grid grid-cols-1 md:grid-cols-4 gap-4 items-center">
-            <p class="font-semibold financial-part-name">Peça 1</p>
+        <!-- Ajuste de responsividade: se adapta em telas pequenas -->
+        <div class="financial-item grid grid-cols-2 md:grid-cols-4 gap-4 items-center">
+            <p class="font-semibold financial-part-name col-span-2 md:col-span-1">Peça 1</p>
             <input type="number" placeholder="Quantidade" class="p-2 border rounded-md w-full financial-quantity">
             <input type="number" step="0.01" placeholder="Valor Unitário (R$)" class="p-2 border rounded-md w-full financial-price">
             <p class="font-bold text-right financial-subtotal">R$ 0,00</p>
@@ -136,11 +140,12 @@
 
     <template id="detalhadoOrderTemplate">
         <div class="space-y-2">
-            <div class="grid grid-cols-12 gap-2 font-semibold text-sm px-1">
-                <div class="col-span-3">Tipo de Peça</div>
-                <div class="col-span-2">Tamanho</div>
-                <div class="col-span-4">Nome na Camisa</div>
-                <div class="col-span-2">Número/Outro</div>
+            <!-- Ajuste de responsividade: grid em telas pequenas -->
+            <div class="grid grid-cols-2 sm:grid-cols-12 gap-2 font-semibold text-sm px-1">
+                <div class="hidden sm:block sm:col-span-3">Tipo de Peça</div>
+                <div class="hidden sm:block sm:col-span-2">Tamanho</div>
+                <div class="hidden sm:block sm:col-span-4">Nome na Camisa</div>
+                <div class="hidden sm:block sm:col-span-2">Número/Outro</div>
             </div>
             <div class="detailed-items-list space-y-2"></div>
             <button type="button" class="add-detailed-row-btn mt-2 bg-gray-200 text-gray-800 text-sm py-1 px-3 rounded-lg hover:bg-gray-300">+ Adicionar Linha</button>
@@ -263,7 +268,6 @@
         };
         
         const renderComumView = (itemsData = {}) => {
-            // FIX para o bug de alinhamento vertical
             const categories = { 'Baby Look': ['PP', 'P', 'M', 'G', 'GG', 'XG'], 'Normal': ['PP', 'P', 'M', 'G', 'GG', 'XG'], 'Infantil': ['2 anos', '4 anos', '6 anos', '8 anos', '10 anos', '12 anos'] };
             let html = '<div class="space-y-4">';
             for (const category in categories) {
@@ -288,8 +292,9 @@
             const listContainer = template.querySelector('.detailed-items-list');
             const addRow = (item = {}) => {
                 const row = document.createElement('div');
-                row.className = 'grid grid-cols-12 gap-2 items-center detailed-item-row';
-                row.innerHTML = `<div class="col-span-3"><input type="text" placeholder="Tipo Peça" class="p-1 border rounded-md w-full text-sm item-det-type" value="${item.type || ''}"></div><div class="col-span-2"><input type="text" placeholder="Tamanho" class="p-1 border rounded-md w-full text-sm item-det-size" value="${item.size || ''}"></div><div class="col-span-4"><input type="text" placeholder="Nome na camisa" class="p-1 border rounded-md w-full text-sm item-det-name" value="${item.name || ''}"></div><div class="col-span-2"><input type="text" placeholder="Número" class="p-1 border rounded-md w-full text-sm item-det-number" value="${item.number || ''}"></div><div class="col-span-1 flex justify-center"><button type="button" class="text-red-500 remove-detailed-row">&times;</button></div>`;
+                // Ajuste de responsividade: grid se torna 1 coluna em telas pequenas
+                row.className = 'grid grid-cols-2 sm:grid-cols-12 gap-2 items-center detailed-item-row';
+                row.innerHTML = `<div class="col-span-2 sm:col-span-3"><input type="text" placeholder="Tipo Peça" class="p-1 border rounded-md w-full text-sm item-det-type" value="${item.type || ''}"></div><div class="col-span-1 sm:col-span-2"><input type="text" placeholder="Tamanho" class="p-1 border rounded-md w-full text-sm item-det-size" value="${item.size || ''}"></div><div class="col-span-2 sm:col-span-4"><input type="text" placeholder="Nome na camisa" class="p-1 border rounded-md w-full text-sm item-det-name" value="${item.name || ''}"></div><div class="col-span-1 sm:col-span-2"><input type="text" placeholder="Número" class="p-1 border rounded-md w-full text-sm item-det-number" value="${item.number || ''}"></div><div class="col-span-1 flex justify-center"><button type="button" class="text-red-500 remove-detailed-row">&times;</button></div>`;
                 row.querySelector('.remove-detailed-row').addEventListener('click', () => row.remove());
                 listContainer.appendChild(row);
             };
@@ -469,7 +474,6 @@
                 return `<tr><td class="py-1 px-2 border">${p.type}</td><td class="py-1 px-2 border">${p.material}</td><td class="py-1 px-2 border">${p.colorMain}</td><td class="py-1 px-2 border">${p.colorDetails}</td><td class="py-1 px-2 border text-center">${p.quantity}</td><td class="py-1 px-2 border text-right">R$ ${p.unitPrice?.toFixed(2)}</td><td class="py-1 px-2 border text-right font-bold">R$ ${subtotal.toFixed(2)}</td></tr>`;
             }).join('');
 
-            // FIX para o bug de sobreposição de texto no PDF
             let itemsHtml = '';
             if (order.orderType === 'comum') {
                 itemsHtml = Object.entries(order.items || {}).map(([category, sizes]) => {
@@ -483,13 +487,17 @@
                             </div>`;
                 }).join('');
             } else {
-                itemsHtml = `<table class="w-full text-left text-sm mt-2"><thead><tr class="bg-gray-100"><th class="px-2 py-1">Tipo</th><th class="px-2 py-1">Tamanho</th><th class="px-2 py-1">Nome</th><th class="px-2 py-1">Número</th></tr></thead><tbody>                ${(order.items || []).map(i => `<tr><td class="border px-2 py-1">${i.type}</td><td class="border px-2 py-1">${i.size}</td><td class="border px-2 py-1">${i.name}</td><td class="border px-2 py-1">${i.number}</td></tr>`).join('')}
-                </tbody></table>`;            }
-
+                itemsHtml = `<!-- Ajuste de responsividade para a tabela de itens detalhados -->
+                            <div class="overflow-x-auto">
+                                <table class="w-full text-left text-sm mt-2"><thead><tr class="bg-gray-100"><th class="px-2 py-1">Tipo</th><th class="px-2 py-1">Tamanho</th><th class="px-2 py-1">Nome</th><th class="px-2 py-1">Número</th></tr></thead><tbody>                ${(order.items || []).map(i => `<tr><td class="border px-2 py-1">${i.type}</td><td class="border px-2 py-1">${i.size}</td><td class="border px-2 py-1">${i.name}</td><td class="border px-2 py-1">${i.number}</td></tr>`).join('')}
+                                </tbody></table>
+                            </div>`;            }
+            
             const modalContent = `<div class="bg-white rounded-xl shadow-2xl w-full max-w-4xl max-h-[95vh] flex flex-col">
                     <div id="printableArea" class="p-8 overflow-y-auto printable-area">
                         <h2 class="text-2xl font-bold mb-4">Detalhes do Pedido - ${order.clientName}</h2>
-                        <div class="grid grid-cols-2 gap-x-8 gap-y-2 mb-4 text-sm">
+                        <!-- Ajuste de responsividade: grid se torna 1 coluna em telas pequenas -->
+                        <div class="grid grid-cols-1 sm:grid-cols-2 gap-x-8 gap-y-2 mb-4 text-sm">
                             <div><strong>Cliente:</strong> ${order.clientName}</div>
                             <div><strong>Telefone:</strong> ${order.clientPhone || 'N/A'}</div>
                             <div><strong>Data do Pedido:</strong> ${order.orderDate ? new Date(order.orderDate.replace(/-/g, '\/')).toLocaleDateString() : 'N/A'}</div>
@@ -497,13 +505,17 @@
                             <div><strong>Status:</strong> ${order.orderStatus}</div>
                         </div>
                         <h3 class="font-bold text-lg mt-4">Descrição das Peças</h3>
-                        <table class="w-full text-left text-sm mt-2"><thead><tr class="bg-gray-100"><th class="px-2 py-1">Tipo</th><th class="px-2 py-1">Material</th><th class="px-2 py-1">Cor Malha</th><th class="px-2 py-1">Cor Detalhes</th><th class="px-2 py-1 text-center">Qtd</th><th class="px-2 py-1 text-right">V. Un.</th><th class="px-2 py-1 text-right">Subtotal</th></tr></thead><tbody>${partsHtml}</tbody></table>
+                        <!-- Ajuste de responsividade: tabelas com scroll horizontal em telas pequenas -->
+                        <div class="overflow-x-auto">
+                            <table class="w-full text-left text-sm mt-2"><thead><tr class="bg-gray-100"><th class="px-2 py-1">Tipo</th><th class="px-2 py-1">Material</th><th class="px-2 py-1">Cor Malha</th><th class="px-2 py-1">Cor Detalhes</th><th class="px-2 py-1 text-center">Qtd</th><th class="px-2 py-1 text-right">V. Un.</th><th class="px-2 py-1 text-right">Subtotal</th></tr></thead><tbody>${partsHtml}</tbody></table>
+                        </div>
                         <h3 class="font-bold text-lg mt-4">Itens e Personalização (${order.orderType})</h3>
                         <div class="text-sm mt-2">${itemsHtml || 'Nenhum item especificado.'}</div>
                         <h3 class="font-bold text-lg mt-4">Observação Geral</h3>
                         <p class="text-sm border p-2 rounded-md bg-gray-50 mt-2">${order.generalObservation || 'Nenhuma.'}</p>
                         <h3 class="font-bold text-lg mt-4">Financeiro</h3>
-                        <div class="grid grid-cols-2 gap-4 text-sm mt-2 p-3 bg-gray-100 rounded-lg">
+                        <!-- Ajuste de responsividade: grid se torna 1 coluna em telas pequenas -->
+                        <div class="grid grid-cols-1 sm:grid-cols-2 gap-4 text-sm mt-2 p-3 bg-gray-100 rounded-lg">
                             <div><strong>Valor Total:</strong> <span class="font-bold">R$ ${totalValue.toFixed(2)}</span></div>
                             <div><strong>Adiantamento:</strong> R$ ${(order.downPayment || 0).toFixed(2)}</div>
                             <div><strong>Forma de Pagamento:</strong> ${order.paymentMethod || 'N/A'}</div>
@@ -512,9 +524,9 @@
                         <h3 class="font-bold text-lg mt-4">Arquivos</h3>
                         <div class="flex flex-wrap gap-4 mt-2">${(order.mockupUrls || []).map(url => `<a href="${url}" target="_blank"><img src="${url}" class="w-32 h-32 object-cover border rounded-md"></a>`).join('')}</div>
                     </div>
-                    <div class="p-4 bg-gray-100 border-t flex justify-end space-x-4">
-                         <button id="closeViewBtn" class="bg-gray-500 text-white font-semibold py-2 px-6 rounded-lg hover:bg-gray-600">Fechar</button>
-                         <button id="printPdfBtn" class="bg-blue-600 text-white font-semibold py-2 px-6 rounded-lg hover:bg-blue-700">Gerar PDF</button>
+                    <div class="p-4 bg-gray-100 border-t flex flex-col sm:flex-row justify-end space-x-0 sm:space-x-4 space-y-2 sm:space-y-0">
+                         <button id="closeViewBtn" class="bg-gray-500 text-white font-semibold py-2 px-6 rounded-lg hover:bg-gray-600 w-full sm:w-auto">Fechar</button>
+                         <button id="printPdfBtn" class="bg-blue-600 text-white font-semibold py-2 px-6 rounded-lg hover:bg-blue-700 w-full sm:w-auto">Gerar PDF</button>
                     </div>
                 </div>`;            DOM.viewModal.innerHTML = modalContent;
             DOM.viewModal.classList.remove('hidden');
