--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <header class="flex flex-col sm:flex-row justify-between items-start sm:items-center mb-8">
             <div>
                 <h1 class="text-3xl font-bold text-gray-900">Gerenciador de Pedidos</h1>
-                <p class="text-gray-600 mt-1">Sua ferramenta de gestão de fardamentos 1.5.</p>
+                <p class="text-gray-600 mt-1">Sua ferramenta de gestão de fardamentos 1.2.</p>
             </div>
             <button id="addOrderBtn" class="mt-4 sm:mt-0 bg-blue-600 text-white font-semibold py-2 px-4 rounded-lg shadow-md hover:bg-blue-700 transition duration-300 flex items-center">
                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6 mr-2"><path stroke-linecap="round" stroke-linejoin="round" d="M12 9v6m3-3H9m12 0a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z" /></svg>
@@ -251,9 +251,9 @@
          */
         const initializeFirebase = async () => {
             // Verifica se a configuração do Firebase é válida.
-            if (!firebaseConfig.projectId) {
+            if (!firebaseConfig || !firebaseConfig.projectId) {
                 console.error("Erro na configuração do Firebase: projectId não fornecido.");
-                showInfoModal("Erro na inicialização do app. Verifique a configuração do Firebase.");
+                showInfoModal("Erro na inicialização do app. Certifique-se de que está a correr este código num ambiente que forneça a configuração do Firebase.");
                 DOM.loadingIndicator.textContent = "Erro na inicialização. Verifique o console para detalhes.";
                 return;
             }
